fix: embedder tutorial

--- a/tutorials/embedder.ipynb
+++ b/tutorials/embedder.ipynb
@@ -499,11 +499,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from adalflow.core.types import Embedding\n",
+    "from adalflow.core.types import Embedding, EmbedderOutput\n",
     "from adalflow.core.functional import normalize_vector\n",
     "from typing import List\n",
     "from adalflow.core.component import Component\n",
@@ -517,18 +517,14 @@
     "        assert self.new_dim < self.old_dim, \"new_dim should be less than old_dim\"\n",
     "\n",
     "    def call(self, input: List[Embedding]) -> List[Embedding]:\n",
-    "        output: List[Embedding] = deepcopy(input)\n",
-    "        for embedding in output:\n",
+    "        output: EmbedderOutput = deepcopy(input)\n",
+    "        for embedding in output.data:\n",
     "            old_embedding = embedding.embedding\n",
     "            new_embedding = old_embedding[: self.new_dim]\n",
     "            if self.normalize:\n",
     "                new_embedding = normalize_vector(new_embedding)\n",
     "            embedding.embedding = new_embedding\n",
-    "        return output\n",
-    "    \n",
-    "    def _extra_repr(self) -> str:\n",
-    "        repr_str = f\"old_dim={self.old_dim}, new_dim={self.new_dim}, normalize={self.normalize}\"\n",
-    "        return repr_str"
+    "        return output.data"
    ]
   },
   {
