--- a/use_cases/agent/react_agent.ipynb
+++ b/use_cases/agent/react_agent.ipynb
@@ -43,6 +43,7 @@
    "source": [
     "# load the dataset\n",
     "from datasets import load_dataset\n",
+    "\n",
     "dataset = load_dataset(path=\"hotpot_qa\", name=\"fullwiki\")"
    ]
   },
@@ -114,7 +115,6 @@
     }
    ],
    "source": [
-    "\n",
     "import dotenv\n",
     "from adalflow.components.model_client import OpenAIClient\n",
     "from adalflow.components.agent.react_agent import ReActAgent\n",
@@ -150,15 +150,17 @@
     "import re\n",
     "import string\n",
     "\n",
+    "\n",
     "# copy code from the paper\n",
     "def clean_str(p):\n",
-    "  return p.encode().decode(\"unicode-escape\").encode(\"latin1\").decode(\"utf-8\")\n",
+    "    return p.encode().decode(\"unicode-escape\").encode(\"latin1\").decode(\"utf-8\")\n",
+    "\n",
     "\n",
     "# normalization copied from the paper's code\n",
     "def normalize_answer(s):\n",
     "    def remove_articles(text):\n",
     "        return re.sub(r\"\\b(a|an|the)\\b\", \" \", text)\n",
-    "  \n",
+    "\n",
     "    def white_space_fix(text):\n",
     "        return \" \".join(text.split())\n",
     "\n",
@@ -171,6 +173,7 @@
     "\n",
     "    return white_space_fix(remove_articles(remove_punc(lower(s))))\n",
     "\n",
+    "\n",
     "def search(entity: str) -> str:\n",
     "    \"\"\"\n",
     "    searches the exact entity on Wikipedia and returns the first paragraph if it exists. If not, it will return some similar entities to search.\n",
@@ -178,29 +181,33 @@
     "    # Format the entity for URL encoding\n",
     "    entity_formatted = entity.replace(\" \", \"+\")\n",
     "    url = f\"https://en.wikipedia.org/w/index.php?search={entity_formatted}\"\n",
-    "    \n",
+    "\n",
     "    # Fetch the page\n",
     "    response = requests.get(url)\n",
-    "    soup = BeautifulSoup(response.text, 'html.parser')\n",
-    "    \n",
+    "    soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "\n",
     "    # Check if the exact page was found or suggest similar items\n",
     "    # when <div class=mw-search-result-heading> is detected, it means the entity page is not found on wikipedia\n",
     "    result_divs = soup.find_all(\"div\", {\"class\": \"mw-search-result-heading\"})\n",
-    "    \n",
-    "    if result_divs: # this means the searched entity page is not in wikipedia, wikipedia will show a list of similar entities\n",
+    "\n",
+    "    if (\n",
+    "        result_divs\n",
+    "    ):  # this means the searched entity page is not in wikipedia, wikipedia will show a list of similar entities\n",
     "        # get Similar results\n",
     "        similar_titles = [div.a.get_text() for div in result_divs]\n",
-    "        return f\"Could not find exact page for '{entity}'. Similar topics: {similar_titles[:5]}\" # return the top 5 similar titles\n",
+    "        return f\"Could not find exact page for '{entity}'. Similar topics: {similar_titles[:5]}\"  # return the top 5 similar titles\n",
     "    else:\n",
     "        # the paper uses page to represent content in <p>\n",
     "        # Extract xontent\n",
-    "        page_list = [p.get_text().strip() for p in soup.find_all(\"p\") + soup.find_all(\"ul\")]\n",
+    "        page_list = [\n",
+    "            p.get_text().strip() for p in soup.find_all(\"p\") + soup.find_all(\"ul\")\n",
+    "        ]\n",
     "        # TODO: Recursive search, if find any concept that needs more search then call search again\n",
     "        # if any(\"may refer to:\" in p for p in page_list):\n",
     "        #     search(entity)\n",
     "\n",
     "        # restructure & clean the page content following the paper's logic\n",
-    "        page = ''\n",
+    "        page = \"\"\n",
     "        for p in page_list:\n",
     "            if len(p.split(\" \")) > 2:\n",
     "                page += clean_str(p)\n",
@@ -208,31 +215,39 @@
     "                    page += \"\\n\"\n",
     "        paragraphs = page.split(\"\\n\")\n",
     "        paragraphs = [p.strip() for p in paragraphs if p.strip()]\n",
-    "        \n",
+    "\n",
     "        sentences = []\n",
     "        for p in paragraphs:\n",
-    "            sentences += p.split('. ')\n",
-    "        sentences = [s.strip() + '.' for s in sentences if s.strip()]\n",
-    "        \n",
+    "            sentences += p.split(\". \")\n",
+    "        sentences = [s.strip() + \".\" for s in sentences if s.strip()]\n",
+    "\n",
     "        # return the first 5 sentences\n",
     "        if sentences:\n",
-    "            return ' '.join(sentences[:5]) if len(sentences)>=5 else ' '.join(sentences)\n",
+    "            return (\n",
+    "                \" \".join(sentences[:5]) if len(sentences) >= 5 else \" \".join(sentences)\n",
+    "            )\n",
     "        else:\n",
     "            return \"No content found on this page.\"\n",
-    "        \n",
+    "\n",
     "        # TODO: clean the paragraphs and return the searched content\n",
     "\n",
     "\n",
     "def lookup(text: str, keyword: str) -> str:\n",
     "    \"\"\"\n",
-    "        returns the sentences containing keyword in the current passage.\n",
+    "    returns the sentences containing keyword in the current passage.\n",
     "    \"\"\"\n",
-    "    sentences = text.split('.')\n",
-    "    matching_sentences = [sentence.strip() + '.' for sentence in sentences if keyword.lower() in sentence.lower()]\n",
+    "    sentences = text.split(\".\")\n",
+    "    matching_sentences = [\n",
+    "        sentence.strip() + \".\"\n",
+    "        for sentence in sentences\n",
+    "        if keyword.lower() in sentence.lower()\n",
+    "    ]\n",
     "    if not matching_sentences:\n",
     "        return \"No sentences found with the keyword.\"\n",
     "    else:\n",
-    "        return ' '.join(matching_sentences)  # Join all matching sentences into a single string"
+    "        return \" \".join(\n",
+    "            matching_sentences\n",
+    "        )  # Join all matching sentences into a single string"
    ]
   },
   {
@@ -262,7 +277,7 @@
    "outputs": [],
    "source": [
     "examples = [\n",
-    "\"\"\"Question: What is the elevation range for the area that the eastern sector of the Colorado orogeny extends into?\n",
+    "    \"\"\"Question: What is the elevation range for the area that the eastern sector of the Colorado orogeny extends into?\n",
     "Thought 1: I need to search Colorado orogeny, find the area that the eastern sector of the Colorado orogeny extends into, then find the elevation range of the area.\n",
     "Action 1: search(\"Colorado orogeny\")\n",
     "Observation 1: The Colorado orogeny was an episode of mountain building (an orogeny) in Colorado and surrounding areas.\n",
@@ -277,7 +292,7 @@
     "Observation 4: The High Plains are a subregion of the Great Plains. From east to west, the High Plains rise in elevation from around 1,800 to 7,000 ft (550 to 2,130 m).[3]\n",
     "Thought 5: High Plains rise in elevation from around 1,800 to 7,000 ft, so the answer is 1,800 to 7,000 ft.\n",
     "Action 5: finish(\"1,800 to 7,000 ft\")\"\"\",\n",
-    "\"\"\"Question: Musician and satirist Allie Goertz wrote a song about the \"The Simpsons\" character Milhouse, who Matt Groening named after who?\n",
+    "    \"\"\"Question: Musician and satirist Allie Goertz wrote a song about the \"The Simpsons\" character Milhouse, who Matt Groening named after who?\n",
     "Thought 1: The question simplifies to \"The Simpsons\" character Milhouse is named after who. I only need to search Milhouse and find who it is named after.\n",
     "Action 1: search(\"Milhouse\")\n",
     "Observation 1: Milhouse Mussolini Van Houten is a recurring character in the Fox animated television series The Simpsons voiced by Pamela Hayden and created by Matt Groening.\n",
@@ -286,7 +301,7 @@
     "Observation 2: (Result 1 / 1) Milhouse was named after U.S. president Richard Nixon, whose middle name was Milhous. \n",
     "Thought 3: Milhouse was named after U.S. president Richard Nixon, so the answer is Richard Nixon.\n",
     "Action 3: finish(\"Richard Nixon\")\"\"\",\n",
-    "\"\"\"Question: Which documentary is about Finnish rock groups, Adam Clayton Powell or The Saimaa Gesture?\n",
+    "    \"\"\"Question: Which documentary is about Finnish rock groups, Adam Clayton Powell or The Saimaa Gesture?\n",
     "Thought 1: I need to search Adam Clayton Powell and The Saimaa Gesture, and find which documentary is about Finnish rock groups.\n",
     "Action 1: search(\"Adam Clayton Powell\")\n",
     "Observation 1: Could not find [\"Adam Clayton Powell\"]. Similar: ['Adam Clayton Powell III', 'Seventh Avenue (Manhattan)', 'Adam Clayton Powell Jr. State Office Building', 'Isabel Washington Powell', 'Adam Powell', 'Adam Clayton Powell (film)', 'Giancarlo Esposito'].\n",
@@ -296,7 +311,7 @@
     "The film is about the rise and fall of influential African-American politician Adam Clayton Powell Jr.[3][4] It was later aired as part of the PBS series The American Experience.\n",
     "Thought 3: Adam Clayton Powell (film) is a documentary about an African-American politician, not Finnish rock groups. So the documentary about Finnish rock groups must instead be The Saimaa Gesture.\n",
     "Action 3: finish(\"The Saimaa Gesture\")\"\"\",\n",
-    "\"\"\"Question: What profession does Nicholas Ray and Elia Kazan have in common?\n",
+    "    \"\"\"Question: What profession does Nicholas Ray and Elia Kazan have in common?\n",
     "Thought 1: I need to search Nicholas Ray and Elia Kazan, find their professions, then find the profession they have in common.\n",
     "Action 1: search(\"Nicholas Ray\")\n",
     "Observation 1: Nicholas Ray (born Raymond Nicholas Kienzle Jr., August 7, 1911 – June 16, 1979) was an American film director, screenwriter, and actor best known for the 1955 film Rebel Without a Cause.\n",
@@ -305,7 +320,7 @@
     "Observation 2: Elia Kazan was an American film and theatre director, producer, screenwriter and actor.\n",
     "Thought 3: Professions of Elia Kazan are director, producer, screenwriter, and actor. So profession Nicholas Ray and Elia Kazan have in common is director, screenwriter, and actor.\n",
     "Action 3: finish(\"director, screenwriter, actor\")\"\"\",\n",
-    "\"\"\"Question: Which magazine was started first Arthur's Magazine or First for Women?\n",
+    "    \"\"\"Question: Which magazine was started first Arthur's Magazine or First for Women?\n",
     "Thought 1: I need to search Arthur's Magazine and First for Women, and find which was started first.\n",
     "Action 1: search(\"Arthur's Magazine\")\n",
     "Observation 1: Arthur's Magazine (1844-1846) was an American literary periodical published in Philadelphia in the 19th century. \n",
@@ -314,7 +329,7 @@
     "Observation 2: First for Women is a woman's magazine published by Bauer Media Group in the USA.[1] The magazine was started in 1989. \n",
     "Thought 3: First for Women was started in 1989. 1844 (Arthur's Magazine) < 1989 (First for Women), so Arthur's Magazine was started first.\n",
     "Action 3: finish(\"Arthur's Magazine\")\"\"\",\n",
-    "\"\"\"Question: Were Pavel Urysohn and Leonid Levin known for the same type of work?\n",
+    "    \"\"\"Question: Were Pavel Urysohn and Leonid Levin known for the same type of work?\n",
     "Thought 1: I need to search Pavel Urysohn and Leonid Levin, find their types of work, then find if they are the same.\n",
     "Action 1: search(\"Pavel Urysohn\")\n",
     "Observation 1: Pavel Samuilovich Urysohn (February 3, 1898 â August 17, 1924) was a Soviet mathematician who is best known for his contributions in dimension theory.\n",
@@ -322,7 +337,7 @@
     "Action 2: search(\"Leonid Levin\")\n",
     "Observation 2: Leonid Anatolievich Levin is a Soviet-American mathematician and computer scientist. \n",
     "Thought 3: Leonid Levin is a mathematician and computer scientist. So Pavel Urysohn and Leonid Levin have the same type of work. \n",
-    "Action 3: finish(\"yes\")\"\"\"\n",
+    "Action 3: finish(\"yes\")\"\"\",\n",
     "]"
    ]
   },
@@ -334,7 +349,7 @@
    "source": [
     "# preset up the examples as prompt_kwargs, the examples will be included in the system prompt\n",
     "\n",
-    "preset_prompt_kwargs = {\"examples\": examples} "
+    "preset_prompt_kwargs = {\"examples\": examples}"
    ]
   },
   {
@@ -353,8 +368,8 @@
    "outputs": [],
    "source": [
     "gpt_model_kwargs = {\n",
-    "        \"model\": \"gpt-3.5-turbo\",\n",
-    "        \"temperature\": 0.0,\n",
+    "    \"model\": \"gpt-3.5-turbo\",\n",
+    "    \"temperature\": 0.0,\n",
     "}"
    ]
   },
@@ -517,8 +532,11 @@
     "# max_steps refers to how many thought-action round we allow the model to perform\n",
     "# to save resources, let's use 3 here\n",
     "agent = ReActAgent(\n",
-    "        tools=tools, max_steps=3, model_client=OpenAIClient(),\n",
-    "        model_kwargs=gpt_model_kwargs, preset_prompt_kwargs=preset_prompt_kwargs\n",
+    "    tools=tools,\n",
+    "    max_steps=3,\n",
+    "    model_client=OpenAIClient(),\n",
+    "    model_kwargs=gpt_model_kwargs,\n",
+    "    preset_prompt_kwargs=preset_prompt_kwargs,\n",
     ")\n",
     "agent"
    ]
@@ -542,7 +560,8 @@
    "source": [
     "import importlib\n",
     "import adalflow\n",
-    "importlib.reload(adalflow)\n"
+    "\n",
+    "importlib.reload(adalflow)"
    ]
   },
   {
@@ -681,13 +700,18 @@
     "num_questions = 5\n",
     "for i in range(num_questions):\n",
     "    question = val_dataset[i][\"question\"]\n",
-    "    gt_answer = normalize_answer(val_dataset[i][\"answer\"]) # normalize the ground truth answer\n",
-    "    \n",
+    "    gt_answer = normalize_answer(\n",
+    "        val_dataset[i][\"answer\"]\n",
+    "    )  # normalize the ground truth answer\n",
+    "\n",
     "    # get the agent's response\n",
     "    pred_answer = agent(question)\n",
     "    pred_answer = normalize_answer(pred_answer)\n",
-    "    \n",
-    "    printc(f\"question: {question}, ground truth: {gt_answer}, pred answer: {pred_answer}\", color=\"yellow\")\n"
+    "\n",
+    "    printc(\n",
+    "        f\"question: {question}, ground truth: {gt_answer}, pred answer: {pred_answer}\",\n",
+    "        color=\"yellow\",\n",
+    "    )"
    ]
   },
   {
@@ -995,8 +1019,11 @@
     "FM_evaluator = AnswerMatchAcc(type=\"fuzzy_match\")\n",
     "\n",
     "agent = ReActAgent(\n",
-    "        tools=tools, max_steps=7, model_client=OpenAIClient(),\n",
-    "        model_kwargs=gpt_model_kwargs, preset_prompt_kwargs=preset_prompt_kwargs\n",
+    "    tools=tools,\n",
+    "    max_steps=7,\n",
+    "    model_client=OpenAIClient(),\n",
+    "    model_kwargs=gpt_model_kwargs,\n",
+    "    preset_prompt_kwargs=preset_prompt_kwargs,\n",
     ")\n",
     "\n",
     "num_questions = 10\n",
@@ -1005,18 +1032,23 @@
     "start_time = time.time()\n",
     "for i in range(num_questions):\n",
     "    question = val_dataset[i][\"question\"]\n",
-    "    gt_answer = normalize_answer(val_dataset[i][\"answer\"]) # normalize the ground truth answer\n",
+    "    gt_answer = normalize_answer(\n",
+    "        val_dataset[i][\"answer\"]\n",
+    "    )  # normalize the ground truth answer\n",
     "    gt_answers.append(gt_answer)\n",
-    "    \n",
+    "\n",
     "    # get the agent's response\n",
     "    pred_answer = agent(question)\n",
     "    pred_answer = normalize_answer(pred_answer)\n",
     "    pred_answers.append(pred_answer)\n",
-    "    \n",
-    "    printc(f\"No. {i+1}, question: {question}, ground truth: {gt_answer}, pred answer: {pred_answer}\", color=\"yellow\")\n",
+    "\n",
+    "    printc(\n",
+    "        f\"No. {i+1}, question: {question}, ground truth: {gt_answer}, pred answer: {pred_answer}\",\n",
+    "        color=\"yellow\",\n",
+    "    )\n",
     "\n",
     "end_time = time.time()\n",
-    "    \n",
+    "\n",
     "em = EM_evaluator.compute(pred_answers=pred_answers, gt_answers=gt_answers)\n",
     "fm = FM_evaluator.compute(pred_answers=pred_answers, gt_answers=gt_answers)\n",
     "avg_time = (end_time - start_time) / num_questions\n",
@@ -1262,8 +1294,7 @@
     "FM_evaluator = AnswerMatchAcc(type=\"fuzzy_match\")\n",
     "\n",
     "agent = ReActAgent(\n",
-    "        max_steps=7, model_client=OpenAIClient(),\n",
-    "        model_kwargs=gpt_model_kwargs\n",
+    "    max_steps=7, model_client=OpenAIClient(), model_kwargs=gpt_model_kwargs\n",
     ")\n",
     "\n",
     "num_questions = 10\n",
@@ -1272,18 +1303,23 @@
     "start_time = time.time()\n",
     "for i in range(num_questions):\n",
     "    question = val_dataset[i][\"question\"]\n",
-    "    gt_answer = normalize_answer(val_dataset[i][\"answer\"]) # normalize the ground truth answer\n",
+    "    gt_answer = normalize_answer(\n",
+    "        val_dataset[i][\"answer\"]\n",
+    "    )  # normalize the ground truth answer\n",
     "    gt_answers.append(gt_answer)\n",
-    "    \n",
+    "\n",
     "    # get the agent's response\n",
     "    pred_answer = agent(question)\n",
     "    pred_answer = normalize_answer(pred_answer)\n",
     "    pred_answers.append(pred_answer)\n",
-    "    \n",
-    "    printc(f\"No. {i+1}, question: {question}, ground truth: {gt_answer}, pred answer: {pred_answer}\", color=\"yellow\")\n",
+    "\n",
+    "    printc(\n",
+    "        f\"No. {i+1}, question: {question}, ground truth: {gt_answer}, pred answer: {pred_answer}\",\n",
+    "        color=\"yellow\",\n",
+    "    )\n",
     "\n",
     "end_time = time.time()\n",
-    "    \n",
+    "\n",
     "em = EM_evaluator.compute(pred_answers=pred_answers, gt_answers=gt_answers)\n",
     "fm = FM_evaluator.compute(pred_answers=pred_answers, gt_answers=gt_answers)\n",
     "avg_time = (end_time - start_time) / num_questions\n",
