fix: TypeError: Client.__init__() got an unexpected keyword argument 'proxies' [Google Colab] #294

--- a/notebooks/tutorials/adalflow_logger.ipynb
+++ b/notebooks/tutorials/adalflow_logger.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "lLGpv1fLLIjF"
+      },
       "source": [
         "# Adalflow RAG Playbook example\n",
         "\n",
@@ -26,10 +15,7 @@
         "- RAG with dynamic data access and caching the embedding dynamically in a local storage.\n",
         "\n",
         "Here we will have have a look at an example with a local DB using FAISS"
-      ],
-      "metadata": {
-        "id": "lLGpv1fLLIjF"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -42,12 +28,33 @@
         "from IPython.display import clear_output\n",
         "\n",
         "!pip install -U adalflow[openai,groq,faiss-cpu]\n",
-        "\n",
+        "!pip uninstall httpx anyio -y\n",
+        "!pip install \"anyio>=3.1.0,<4.0\"\n",
+        "!pip install httpx==0.24.1\n",
         "clear_output()\n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-4c_AGBt3PlR",
+        "outputId": "275b050a-ce64-4b40-a5f9-4ccc12d92add"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Please enter your OpenAI API key: ··········\n",
+            "Please enter your GROQ API key: ··········\n",
+            "API keys have been set.\n"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "from getpass import getpass\n",
@@ -61,29 +68,13 @@
         "os.environ['GROQ_API_KEY'] = groq_api_key\n",
         "\n",
         "print(\"API keys have been set.\")\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "-4c_AGBt3PlR",
-        "outputId": "275b050a-ce64-4b40-a5f9-4ccc12d92add"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Please enter your OpenAI API key: ··········\n",
-            "Please enter your GROQ API key: ··········\n",
-            "API keys have been set.\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "4NztjiLR_EQE"
+      },
       "source": [
         "## Design\n",
         "\n",
@@ -96,45 +87,38 @@
         "2. Additionally, as we can’t always control the outputs of generators, we will provide customized logger and tracers(drop-in decorators) for them, for which we will explain in Tracing. This will not break the first objective.\n",
         "\n",
         "In the future, when we have more complex requirements from users, we will consider adding hooks/callbacks but we will do it in a way to keep the functional and user-facing APIs clean."
-      ],
-      "metadata": {
-        "id": "4NztjiLR_EQE"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "d2H1vYoC_F-g"
+      },
+      "outputs": [],
       "source": [
         "import logging\n",
         "\n",
         "log = logging.getLogger(__name__)"
-      ],
-      "metadata": {
-        "id": "d2H1vYoC_F-g"
-      },
-      "execution_count": 3,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "id": "e2GxAapG_TJH"
+      },
+      "outputs": [],
       "source": [
         "from adalflow.utils.logger import get_logger\n",
         "\n",
         "\n",
         "root_logger = get_logger()"
-      ],
-      "metadata": {
-        "id": "e2GxAapG_TJH"
-      },
-      "execution_count": 4,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from adalflow.utils.logger import printc\n",
-        "\n",
-        "printc(\"All logging examples are done. Feeling green!\", color=\"green\")"
-      ],
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -142,30 +126,39 @@
         "id": "Yk4oiBFE_asG",
         "outputId": "470e30dc-1b31-40c1-9e48-30754ae54b45"
       },
-      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[32m2024-11-28 13:39:41 - [<ipython-input-5-9bd1accb40e0>:3:<cell line: 3>] - All logging examples are done. Feeling green!\u001b[0m\n"
           ]
         }
+      ],
+      "source": [
+        "from adalflow.utils.logger import printc\n",
+        "\n",
+        "printc(\"All logging examples are done. Feeling green!\", color=\"green\")"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "B8lmlT_9_nVP"
+      },
       "source": [
         "Set up all logs in one file\n",
         "\n",
         "Assume your source code is at src/task.py. You can log simply by:"
-      ],
-      "metadata": {
-        "id": "B8lmlT_9_nVP"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "o_Ru1myM_c-J"
+      },
+      "outputs": [],
       "source": [
         "import logging\n",
         "\n",
@@ -174,15 +167,27 @@
         "class Task:\n",
         "    def __init__(self):\n",
         "        log.info(\"This is a user program child logger\")"
-      ],
-      "metadata": {
-        "id": "o_Ru1myM_c-J"
-      },
-      "execution_count": 6,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o7YPjEZk_ehg",
+        "outputId": "ad0f58e9-6f5c-4d00-e737-2fa1ad5ebd85"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2024-11-28 13:39:46 - <ipython-input-7-f4c1161cc964> - INFO - [<ipython-input-7-f4c1161cc964>:9:<cell line: 9>] - This is the log in the main file\n"
+          ]
+        }
+      ],
       "source": [
         "import logging\n",
         "from adalflow.utils.logger import get_logger\n",
@@ -193,36 +198,24 @@
         "# ....\n",
         "\n",
         "root_logger.info(\"This is the log in the main file\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "o7YPjEZk_ehg",
-        "outputId": "ad0f58e9-6f5c-4d00-e737-2fa1ad5ebd85"
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2024-11-28 13:39:46 - <ipython-input-7-f4c1161cc964> - INFO - [<ipython-input-7-f4c1161cc964>:9:<cell line: 9>] - This is the log in the main file\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Separate library and application logs"
-      ],
       "metadata": {
         "id": "Db1_Ob3X_gpe"
-      }
+      },
+      "source": [
+        "Separate library and application logs"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {
+        "id": "rQWuFnUc_gNm"
+      },
+      "outputs": [],
       "source": [
         "from adalflow.utils.logger import get_logger\n",
         "\n",
@@ -231,12 +224,21 @@
         "class Task:\n",
         "    def __init__(self):\n",
         "        app_logger.info(\"This is a user program child logger\")"
-      ],
-      "metadata": {
-        "id": "rQWuFnUc_gNm"
-      },
-      "execution_count": 8,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
