--- a/notebooks/tutorials/adalflow_text_splitter.ipynb
+++ b/notebooks/tutorials/adalflow_text_splitter.ipynb
@@ -8,7 +8,10 @@
    },
    "outputs": [],
    "source": [
-    "!pip install adalflow[openai,groq,faiss-cpu]"
+    "!pip install adalflow[openai,groq,faiss-cpu]\n",
+    "!pip uninstall httpx anyio -y\n",
+    "!pip install \"anyio>=3.1.0,<4.0\"\n",
+    "!pip install httpx==0.24.1"
    ]
   },
   {
