--- a/notebooks/adalflow_colab_template.ipynb
+++ b/notebooks/adalflow_colab_template.ipynb
@@ -54,6 +54,9 @@
     "from IPython.display import clear_output\n",
     "\n",
     "!pip install -U adalflow[openai,groq,faiss-cpu]\n",
+    "!pip uninstall httpx anyio -y\n",
+    "!pip install \"anyio>=3.1.0,<4.0\"\n",
+    "!pip install httpx==0.24.1\n",
     "\n",
     "clear_output()"
    ]
