--- a/notebooks/qas/adalflow_object_count_auto_optimization.ipynb
+++ b/notebooks/qas/adalflow_object_count_auto_optimization.ipynb
@@ -58,7 +58,9 @@
     "from IPython.display import clear_output\n",
     "\n",
     "!pip install -U adalflow[openai,groq,datasets]\n",
-    "\n",
+    "!pip uninstall httpx anyio -y\n",
+    "!pip install \"anyio>=3.1.0,<4.0\"\n",
+    "!pip install httpx==0.24.1\n",
     "clear_output()"
    ]
   },
