--- a/notebooks/tutorials/adalflow_dataclasses.ipynb
+++ b/notebooks/tutorials/adalflow_dataclasses.ipynb
@@ -78,7 +78,9 @@
     "from IPython.display import clear_output\n",
     "\n",
     "!pip install -U adalflow[openai,groq]\n",
-    "\n",
+    "!pip uninstall httpx anyio -y\n",
+    "!pip install \"anyio>=3.1.0,<4.0\"\n",
+    "!pip install httpx==0.24.1\n",
     "clear_output()"
    ]
   },
