--- a/notebooks/tutorials/adalflow_rag_vanilla.ipynb
+++ b/notebooks/tutorials/adalflow_rag_vanilla.ipynb
@@ -98,7 +98,9 @@
    "outputs": [],
    "source": [
     "from adalflow.utils import setup_env\n",
-    "\n",
+    "!pip uninstall httpx anyio -y\n",
+    "!pip install \"anyio>=3.1.0,<4.0\"\n",
+    "!pip install httpx==0.24.1\n",
     "# Load environment variables - Make sure to have OPENAI_API_KEY in .env file and .env is present in current folder\n",
     "setup_env(\".env\")"
    ]
