fix end of files lint

--- a/notebooks/tutorials/adalflow_rag_optimization.ipynb
+++ b/notebooks/tutorials/adalflow_rag_optimization.ipynb
@@ -1,21 +1,10 @@
 {
- "nbformat": 4,
- "nbformat_minor": 0,
- "metadata": {
-  "colab": {
-   "provenance": []
-  },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3"
-  },
-  "language_info": {
-   "name": "python"
-  }
- },
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "xHF95Kr4CzGq"
+   },
    "source": [
     "# 🤗 Welcome to AdalFlow!\n",
     "## The PyTorch library to auto-optimize any LLM task pipelines\n",
@@ -44,13 +33,13 @@
     "- Build the standard RAG with Retriever and Generator components.\n",
     "\n",
     "- Learn how to connect the output-input between components to enable auto-text-grad optimization."
-   ],
-   "metadata": {
-    "id": "xHF95Kr4CzGq"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "Kof5M6DRaKhh"
+   },
    "source": [
     "\n",
     "# Installation\n",
@@ -63,10 +52,7 @@
     "2. Setup  `openai` and `groq` API key in the environment variables\n",
     "\n",
     "You can choose to use different client. You can import the model client you prefer. We support `Anthropic`, `Cohere`, `Google`, `GROQ`, `OpenAI`, `Transformer` and more in development. We will use OpenAI here as an example.Please refer to our [full installation guide](https://adalflow.sylph.ai/get_started/installation.html)"
-   ],
-   "metadata": {
-    "id": "Kof5M6DRaKhh"
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -85,7 +71,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip uninstall httpx anyio -y\n",
+    "!pip install \"anyio>=3.1.0,<4.0\"\n",
+    "!pip install httpx==0.24.1"
+   ]
+  },
+  {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "KapUyHMM07pJ"
+   },
    "source": [
     "## Set Environment Variables\n",
     "\n",
@@ -94,13 +94,28 @@
     "Note: for normal `.py` projects, follow our [official installation guide](https://lightrag.sylph.ai/get_started/installation.html).\n",
     "\n",
     "*Go to [OpenAI](https://platform.openai.com/docs/introduction) to get API keys if you don't already have.*"
-   ],
-   "metadata": {
-    "id": "KapUyHMM07pJ"
-   }
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "ONfzF9Puzdd_",
+    "outputId": "5fc0cd30-9ae7-443a-c06c-31e9edeafd69"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter your OpenAI API key: ··········\n",
+      "API keys have been set.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -114,28 +129,15 @@
     "os.environ[\"OPENAI_API_KEY\"] = openai_api_key\n",
     "\n",
     "print(\"API keys have been set.\")"
-   ],
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "ONfzF9Puzdd_",
-    "outputId": "5fc0cd30-9ae7-443a-c06c-31e9edeafd69"
-   },
-   "execution_count": 3,
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Please enter your OpenAI API key: ··········\n",
-      "API keys have been set.\n"
-     ]
-    }
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "id": "aE3I05BqOmd7"
+   },
+   "outputs": [],
    "source": [
     "import dspy\n",
     "import re\n",
@@ -150,15 +152,15 @@
     "from adalflow.core.retriever import Retriever\n",
     "from adalflow.core.component import fun_to_component\n",
     "from adalflow.components.model_client.openai_client import OpenAIClient"
-   ],
-   "metadata": {
-    "id": "aE3I05BqOmd7"
-   },
-   "execution_count": 20,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "cqUUoua9fUxQ"
+   },
+   "outputs": [],
    "source": [
     "gpt_4o_model = {\n",
     "    \"model_client\": OpenAIClient(),\n",
@@ -175,15 +177,37 @@
     "        \"max_tokens\": 2000,\n",
     "    },\n",
     "}"
-   ],
-   "metadata": {
-    "id": "cqUUoua9fUxQ"
-   },
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "0irHeHUkOmL8",
+    "outputId": "61f778a2-9ec1-4fda-daa2-bcc7f31baa78"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HotPotQAData(id='5a8b57f25542995d1e6f1371', question='Were Scott Derrickson and Ed Wood of the same nationality?', answer='yes', gold_titles=\"{'Scott Derrickson', 'Ed Wood'}\") <class 'adalflow.datasets.types.HotPotQAData'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "HotPotQAData(id='5a8b57f25542995d1e6f1371', question='Were Scott Derrickson and Ed Wood of the same nationality?', answer='yes', gold_titles=\"{'Scott Derrickson', 'Ed Wood'}\")"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def load_datasets():\n",
     "\n",
@@ -215,37 +239,15 @@
     "    answer=\"yes\",\n",
     "    gold_titles=\"{'Scott Derrickson', 'Ed Wood'}\",\n",
     ")"
-   ],
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "0irHeHUkOmL8",
-    "outputId": "61f778a2-9ec1-4fda-daa2-bcc7f31baa78"
-   },
-   "execution_count": 22,
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "HotPotQAData(id='5a8b57f25542995d1e6f1371', question='Were Scott Derrickson and Ed Wood of the same nationality?', answer='yes', gold_titles=\"{'Scott Derrickson', 'Ed Wood'}\") <class 'adalflow.datasets.types.HotPotQAData'>\n"
-     ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "HotPotQAData(id='5a8b57f25542995d1e6f1371', question='Were Scott Derrickson and Ed Wood of the same nationality?', answer='yes', gold_titles=\"{'Scott Derrickson', 'Ed Wood'}\")"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 22
-    }
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "id": "ZZIEtZYHNVjo"
+   },
+   "outputs": [],
    "source": [
     "class DspyRetriever(adal.Retriever):\n",
     "    def __init__(self, top_k: int = 3):\n",
@@ -474,25 +476,34 @@
     "    trainer.diagnose(dataset=trainset, split=\"train\")\n",
     "    # trainer.diagnose(dataset=valset, split=\"val\")\n",
     "    # trainer.diagnose(dataset=testset, split=\"test\")"
-   ],
-   "metadata": {
-    "id": "ZZIEtZYHNVjo"
-   },
-   "execution_count": 23,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "AmkbyxmuruUu"
+   },
    "source": [
     "# Issues and feedback\n",
     "\n",
     "If you encounter any issues, please report them here: [GitHub Issues](https://github.com/SylphAI-Inc/LightRAG/issues).\n",
     "\n",
     "For feedback, you can use either the [GitHub discussions](https://github.com/SylphAI-Inc/LightRAG/discussions) or [Discord](https://discord.gg/ezzszrRZvT)."
-   ],
-   "metadata": {
-    "id": "AmkbyxmuruUu"
-   }
+   ]
   }
- ]
+ ],
+ "metadata": {
+  "colab": {
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
