--- a/notebooks/adalflow_colab_template.ipynb
+++ b/notebooks/adalflow_colab_template.ipynb
@@ -59,6 +59,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip uninstall httpx anyio -y\n",
+    "!pip install \"anyio>=3.1.0,<4.0\"\n",
+    "!pip install httpx==0.24.1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
