--- a/notebooks/tutorials/adalflow_modelclient.ipynb
+++ b/notebooks/tutorials/adalflow_modelclient.ipynb
@@ -88,6 +88,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip uninstall httpx anyio -y\n",
+    "!pip install \"anyio>=3.1.0,<4.0\"\n",
+    "!pip install httpx==0.24.1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "NGE70aZ8BLuf"
