Revert old embedder[because of re-write]

--- a/tutorials/embedder.ipynb
+++ b/tutorials/embedder.ipynb
@@ -148,6 +148,7 @@
    "source": [
     "from adalflow.core.embedder import Embedder\n",
     "from adalflow.components.model_client import TransformersClient\n",
+    "\n",
     "# from adalflow.utils import enable_library_logging\n",
     "\n",
     "# enable_library_logging(level=\"DEBUG\")\n",
@@ -499,17 +500,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from adalflow.core.types import Embedding, EmbedderOutput\n",
+    "from adalflow.core.types import Embedding\n",
     "from adalflow.core.functional import normalize_vector\n",
     "from typing import List\n",
     "from adalflow.core.component import Component\n",
     "from copy import deepcopy\n",
+    "\n",
+    "\n",
     "class DecreaseEmbeddingDim(Component):\n",
-    "    def __init__(self, old_dim: int, new_dim: int,  normalize: bool = True):\n",
+    "    def __init__(self, old_dim: int, new_dim: int, normalize: bool = True):\n",
     "        super().__init__()\n",
     "        self.old_dim = old_dim\n",
     "        self.new_dim = new_dim\n",
@@ -517,14 +520,18 @@
     "        assert self.new_dim < self.old_dim, \"new_dim should be less than old_dim\"\n",
     "\n",
     "    def call(self, input: List[Embedding]) -> List[Embedding]:\n",
-    "        output: EmbedderOutput = deepcopy(input)\n",
-    "        for embedding in output.data:\n",
+    "        output: List[Embedding] = deepcopy(input)\n",
+    "        for embedding in output:\n",
     "            old_embedding = embedding.embedding\n",
     "            new_embedding = old_embedding[: self.new_dim]\n",
     "            if self.normalize:\n",
     "                new_embedding = normalize_vector(new_embedding)\n",
     "            embedding.embedding = new_embedding\n",
-    "        return output.data"
+    "        return output\n",
+    "\n",
+    "    def _extra_repr(self) -> str:\n",
+    "        repr_str = f\"old_dim={self.old_dim}, new_dim={self.new_dim}, normalize={self.normalize}\"\n",
+    "        return repr_str"
    ]
   },
   {
